fix: Max width on nav to avoid spillage

--- a/src/sass/components/_nav.sass
+++ b/src/sass/components/_nav.sass
@@ -43,7 +43,7 @@ nav
     backdrop-filter: blur(1rem)
     z-index: -1
     mask-image: linear-gradient(180deg,rgba(0, 0, 0, 1) 1rem, rgba(0, 0, 0, 0) 100%)
-    transition: none
+    max-width: calc(100vw - 14rem)
 
 .nav-portfolio__link
   font-size: .8rem
